<resources>
    <!--  전역  -->
    <string name="app_name">MingleDay</string>
    <string name="schedule_nav">My Schedule</string>
    <string name="mingle_nav">Mingle Management</string>
    <string name="search_nav">Search</string>
    <string name="menu_nav">Menu</string>
    <string name="requesting">Requesting..</string>
    <string name="saving">Saving..</string>
    <string name="menu_schedule">Schedule</string>
    <string name="menu_mingle">Mingle</string>
    <string name="menu_search">Search</string>
    <string name="menu_mymenu">My Menu</string>
    <string name="menu_add_schedule">Add Schedule</string>
    <string name="menu_notification">Notification</string>
    <string name="top_bar_title">My Schedule</string>

    <!--  로그인 및 회원가입  -->
    <string name="slogan">MingleDay, where we align our day together</string>
    <string name="login_button">Login</string>
    <string name="signup_button">Sign Up</string>
    <string name="email_label">Email</string>
    <string name="email_hint">Input your email</string>
    <string name="password_label">Password</string>
    <string name="signup_guide">Is this your first come?</string>
    <string name="signup_move_button">Go to Sign Up</string>
    <string name="verification_description">The authentication code is valid for 10 minutes.</string>
    <string name="verification_for_reset_description">Email verification is required to change your password.</string>
    <string name="verification_code_label">Verification Code</string>
    <string name="verification_code_hint">Input 6 digits Number</string>
    <string name="send_button">Send Verification Code</string>
    <string name="verification_code_check_description">If you have not received the authentication code, please press Resend the code.</string>
    <string name="verify_code_button">Verify Code</string>
    <string name="resend_button">Send Verification Code Again</string>
    <string name="name_label">Name</string>
    <string name="name_description">Please tell me your name to use the service</string>
    <string name="password_description">Please enter the password to use when logging in</string>
    <string name="name_hint">Input 2 to 5 digits</string>
    <string name="password_hint1">• Input 8 to 20 digits</string>
    <string name="password_hint2">• Include English, Numbers, and Special Characters</string>
    <string name="password_hint3">• Special characters only allow ! @ # $ % ^ &amp; * ( ) _ - + = [ ] { } . ?</string>
    <string name="password_check_label">Password Check</string>
    <string name="password_check_hint1">• Incorrect password</string>
    <string name="nickname_label">Nickname</string>
    <string name="nickname_description">Please set a nickname for anonymous use</string>
    <string name="nickname_hint">Input 2 to 10 digits</string>
    <string name="start_mingleday_button">Get Started with Mingleday</string>
    <string name="view_tutorial_button">View the Mingleday Tutorial</string>
    <string name="next_button">Next</string>
    <string name="reset_password_guide">Forget your password?</string>
    <string name="reset_password_move_button">Reset My Password</string>
    <string name="reset_password_button">Reset My Password</string>

    <!--  스케줄  -->
    <string name="my_schedule_title">My Schedules</string>

    <!--  밍글  -->
    <string name="mingle_list_title">Mingle List</string>
    <string name="mingle_list_cnt">소속 밍글  개</string>
    <string name="add_mingle_button">Add new mingle</string>
    <string name="add_mingle_title">Add Mingle</string>
    <string name="mingle_name_title">Mingle Name Title</string>
    <string name="mingle_type_label">어떤 밍글이 필요하세요?</string>
    <string name="mingle_type_family">family</string>
    <string name="mingle_type_friend">friend</string>
    <string name="mingle_type_lover">lover</string>
    <string name="mingle_type_school">school</string>
    <string name="mingle_type_company">company</string>
    <string name="mingle_type_club">club</string>
    <string name="mingle_type_study">study</string>
    <string name="mingle_type_custom">custom</string>
    <string name="mingle_name_label">Mingle Name</string>
    <string name="mingle_name_hint">1~30자 사이로 밍글의 이름을 입력해주세요</string>
    <string name="mingle_description_label">Mingle Description</string>
    <string name="mingle_description_hint">어떤 밍글인지 알 수 있도록 설명을 작성해주세요</string>
    <string name="mingle_setting_label">Mingle Setting</string>
    <string name="mingle_category_setting_label">Mingle Category Setting</string>
    <string name="mingle_setting_option1">멤버별로 다른 권한을 부여</string>
    <string name="mingle_setting_option2">실명으로만 참여 가능</string>
    <string name="mingle_info_label">Mingle Info.</string>
    <string name="mingle_member_and_permission">Members and Permissions</string>
    <string name="mingle_create_date_label">Start at</string>
    <string name="mingle_member_label">Member</string>
    <string name="mingle_owner_label">Owner</string>
    <string name="permission_invite">Mingle Invitation</string>
    <string name="permission_expulsion">Mingle Expulsion</string>
    <string name="permission_create">Schedule Creation</string>
    <string name="permission_modify">Schedule Modification</string>
    <string name="permission_delete">Schedule Deletion</string>
    <string name="mingle_leave_button">Leave Mingle</string>
    <string name="mingle_expel_button">Expel</string>
    <string name="category_add_button">Add Category</string>
    <string name="send_category_button">Create</string>
    <string name="cancel_category_button">Cancel</string>
    <string name="category_name_label">name</string>
    <string name="category_name_hint">이름은 최소 1자 이상 적어주세요</string>
    <string name="category_description_label">description</string>
    <string name="category_description_hint">설명은 자유롭게 작성해주세요</string>
    <string name="category_text_color_label">text color</string>
    <string name="category_text_color_hint">FFFFFF</string>
    <string name="category_bg_color_label">bg color</string>
    <string name="category_bg_color_hint">000000</string>
    <string name="category_delete_alert">을(를) 삭제하시겠습니까?</string>

    <!-- 일정 -->
    <string name="schedule_date_format">%1$d년 %2$d월</string>
    <string name="schedule_day_format">%1$d일</string>
    <string name="sunday">Sun</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="complete_schedule_submit">완료로 변경</string>
    <string name="cancel_schedule_submit">취소로 변경</string>
    <string name="schedule_instance_memo_label">이번 일정 메모</string>
    <string name="schedule_member_label">참여 멤버</string>
    <string name="schedule_member_memo_label">Memo</string>
    <string name="schedule_member_memo_hint">해당 멤버가 알아야 할 내용을 입력해주세요</string>

    <!-- 일정 생성 -->
    <string name="add_schedule_title">Create Schedule</string>
    <string name="add_schedule_mingle_select">Select Mingle</string>
    <string name="add_schedule_name">Title</string>
    <string name="add_schedule_category_select">Select Category</string>
    <string name="add_schedule_name_hint">Enter a title (1–15 characters)</string>
    <string name="add_schedule_repeat">Repeat</string>
    <string name="add_schedule_repeat_false">No Repeat</string>
    <string name="add_schedule_repeat_true">Repeat Enabled</string>
    <string name="add_schedule_repeat_method">Repeat Type</string>
    <string name="add_schedule_repeat_method_daily">Repeat Daily</string>
    <string name="add_schedule_repeat_weekly">Repeat Weekly</string>
    <string name="add_schedule_repeat_monthly">Repeat Monthly</string>
    <string name="add_schedule_repeat_custom">Custom Repeat</string>
    <string name="add_schedule_repeat_end">Repeat End Condition</string>
    <string name="add_schedule_repeat_end_count">Set Number of Repeats</string>
    <string name="add_schedule_repeat_end_date">Set End Date</string>
    <string name="add_schedule_time">Start &amp; End Time</string>
    <string name="add_schedule_all_day">All Day</string>
    <string name="add_schedule_member">Participants</string>
    <string name="add_schedule_content">Description</string>
    <string name="add_schedule_content_hint">Describe the schedule freely</string>
    <string name="add_schedule_location">Location</string>
    <string name="add_schedule_location_hint">Enter schedule location</string>
    <string name="add_schedule_lock">Lock Schedule</string>
    <string name="add_schedule_lock_visibility">Others cannot view this schedule</string>
    <string name="add_schedule_lock_edit">Others cannot edit this schedule</string>
    <string name="choose_mingle_first">밍글을 먼저 선택해주세요</string>
    <string name="add_schedule_submit">Add Schedule</string>
    <string name="add_schedule_repeat_hint">반복 주기 방법을 사용하면 날짜의 범위를 지정할 수 있어요</string>

    <!--  검색  -->
    <string name="search_title">Search</string>
    <string name="search_hint">Search Schedule</string>
    <string name="search_result_empty">Search results do not exist</string>

    <!--  마이 메뉴  -->
    <string name="my_info_label">My Info</string>
    <string name="language_label">Language</string>
    <string name="setting_label">Setting</string>
    <string name="account_label">My Account</string>
    <string name="register_date_label">Registered At</string>
    <string name="belong_mingle_number_label">Number of mingle</string>
    <string name="logout_button">Logout</string>
    <string name="withdraw_button">Withdraw</string>
    <string name="profile_image_description">profile image</string>
    <string name="email_text">email</string>
    <string name="realname_text">real name</string>
    <string name="nickname_text">Nickname</string>
    <string name="register_date_text">register date</string>
    <string name="belong_mingle_number_text">belong mingle number</string>

    <!--  토스트 메세지  -->
    <string name="internal_server_error">서버 내부에 문제가 발생했습니다. 잠시 후 이용해주세요.</string>
    <string name="auth_mismatch">이메일 또는 비밀번호가 일치하지 않습니다.</string>
    <string name="email_mismatch">이메일이 일치하지 않습니다.</string>
    <string name="password_mismatch">비밀번호가 일치하지 않습니다.</string>
    <string name="verification_mismatch">인증 코드가 일치하지 않습니다.</string>
    <string name="already_exist_email">이미 존재하는 메일입니다. 로그인 또는 다른 이메일을 이용해주세요.</string>
    <string name="invalid_input">유효하지 않은 값이 입력됐습니다.</string>

    <!--  기타  -->
    <string name="image_alt">image</string>
    <string name="date_format">20XX.XX.XX</string>
</resources>