<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:background="@color/bg"
        android:paddingStart="15dp"
        android:paddingEnd="15dp"
        android:paddingTop="20dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <ImageView
                android:id="@+id/back_button"
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image_alt"
                android:src="@drawable/ic_arrow_left"/>

            <TextView
                android:layout_width="0dp"
                android:layout_weight="1"
                android:textAlignment="center"
                android:layout_height="wrap_content"
                android:fontFamily="@font/bold"
                android:textColor="@color/title"
                android:textSize="16sp"
                android:text="@string/add_mingle_title"/>

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:contentDescription="@string/image_alt"
                android:src="@drawable/ic_arrow_right"
                android:visibility="invisible"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/mingle_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingle_type_label"
                android:textSize="16sp"
                android:textColor="@color/title"
                android:fontFamily="@font/semibold"/>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/family_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_family" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/friend_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_friend" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/couple_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_lover" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/school_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_school" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/company_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_company" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/club_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_club" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/study_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_study" />

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/custom_button"
                    style="@style/CategoryChip"
                    android:text="@string/mingle_type_custom" />

                <androidx.constraintlayout.helper.widget.Flow
                    android:id="@+id/categoryFlow"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    app:constraint_referenced_ids="family_button,friend_button,couple_button,school_button,company_button,club_button,study_button,custom_button"
                    app:flow_wrapMode="chain"
                    app:flow_horizontalGap="5dp"
                    app:flow_verticalGap="5dp"
                    app:flow_horizontalStyle="packed"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    app:layout_constraintEnd_toEndOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/input_mingle_name_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingle_name_label"
                android:textSize="16sp"
                android:textColor="@color/title"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_mingle_name_value"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:hint="@string/mingle_name_hint"
                android:background="@drawable/input_full"
                android:textSize="14sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/input_mingle_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingle_description_label"
                android:textSize="16sp"
                android:textColor="@color/title"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_mingle_description_value"
                android:inputType="textMultiLine"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:minHeight="120dp"
                android:gravity="start"
                android:textColorHint="@color/disable"
                android:hint="@string/mingle_description_hint"
                android:background="@drawable/input_full"
                android:textSize="14sp"
                android:paddingStart="16dp"
                android:paddingEnd="16dp"
                android:paddingTop="12dp"
                android:paddingBottom="12dp"
                android:layout_marginTop="5dp"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start"
            android:layout_marginTop="20dp">
            <TextView
                android:id="@+id/input_mingle_setting_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/mingle_setting_label"
                android:textSize="16sp"
                android:textColor="@color/title"
                android:fontFamily="@font/semibold"/>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/content"
                        android:text="@string/mingle_setting_option1"
                        android:layout_marginTop="5dp"
                        />
                    <ImageView
                        android:id="@+id/toggle_permission_value"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_alt"
                        android:src="@drawable/ic_toggle_off"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="5dp"
                    >
                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:textColor="@color/content"
                        android:text="@string/mingle_setting_option2"
                        />
                    <ImageView
                        android:id="@+id/toggle_realname_value"
                        android:layout_width="36dp"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/image_alt"
                        android:src="@drawable/ic_toggle_off"/>
                </LinearLayout>
        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/add_mingle_button"
            android:enabled="false"
            style="@style/MainButton"
            android:text="@string/add_mingle_button"
            android:layout_marginTop="20dp"
            />
    </LinearLayout>
</ScrollView>