<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:padding="20dp"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/add_category_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_name_label"
                android:layout_marginEnd="10dp"
                />
            <EditText
                android:id="@+id/input_name_value"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:hint="@string/category_name_hint"
                style="@style/InputBottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_description_label"
                android:layout_marginEnd="10dp"
                />
            <EditText
                android:id="@+id/input_description_value"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:hint="@string/category_description_hint"
                style="@style/InputBottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_text_color_label"
                android:layout_marginEnd="10dp"
                />
            <EditText
                android:focusable="false"
                android:id="@+id/input_text_color_value"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="FFFFFF"
                android:textColor="@color/disable"
                android:maxLength="6"
                style="@style/InputBottom"
                />
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/category_bg_color_label"
                android:layout_marginEnd="10dp"
                />
            <EditText
                android:id="@+id/input_background_color_value"
                android:inputType="text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:hint="@string/category_bg_color_hint"
                android:maxLength="6"
                style="@style/InputBottom"
                />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>