<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/content"
        android:text="@string/verification_code_check_description"
        android:layout_marginBottom="70dp"/>

    <LinearLayout
        android:id="@+id/input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <TextView
                android:id="@+id/input_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="14sp"
                android:textColor="@color/text_input_label_selector"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_email_value"
                android:inputType="none"
                android:focusable="false"
                android:clickable="false"
                android:cursorVisible="false"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:hint="@string/email_hint"
                style="@style/InputBottom"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="start">
            <TextView
                android:id="@+id/input_verification_code_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/verification_code_label"
                android:textSize="14sp"
                android:textColor="@color/text_input_label_selector"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_verification_code_value"
                android:inputType="numberDecimal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColorHint="@color/disable"
                android:maxLength="6"
                android:hint="@string/verification_code_hint"
                style="@style/InputBottom"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/check_verification_code_button"
        android:enabled="false"
        style="@style/MainButton"
        android:text="@string/verify_code_button"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <TextView
            android:id="@+id/resend_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/label"
            android:layout_marginStart="10dp"
            android:textSize="12sp"
            android:fontFamily="@font/medium"
            android:text="@string/resend_button"/>
    </LinearLayout>
</LinearLayout>