<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:textColor="@color/content"
        android:text="@string/slogan"
        android:layout_marginBottom="70dp"/>

    <LinearLayout
        android:id="@+id/input_wrapper"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:gravity="start">
            <TextView
                android:id="@+id/input_email_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/email_label"
                android:textSize="14sp"
                android:textColor="@color/text_input_label_selector"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_email_value"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputBottom"
                />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="20dp"
            android:gravity="start">
            <TextView
                android:id="@+id/input_password_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/password_label"
                android:textSize="14sp"
                android:textColor="@color/text_input_label_selector"
                android:fontFamily="@font/semibold"/>
            <EditText
                android:id="@+id/input_password_value"
                android:inputType="textPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/InputBottom"
                />
        </LinearLayout>
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/login_button"
        android:enabled="false"
        style="@style/MainButton"
        android:text="@string/login_button"
        android:layout_marginTop="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        android:layout_marginTop="10dp"
        >
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label"
                android:textSize="12sp"
                android:text="@string/signup_guide"/>
            <TextView
                android:id="@+id/go_to_signup_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                android:text="@string/signup_move_button"/>
        </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label"
                android:textSize="12sp"
                android:text="@string/reset_password_guide"/>
            <TextView
                android:id="@+id/go_to_reset_password_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/label"
                android:layout_marginStart="10dp"
                android:textSize="12sp"
                android:fontFamily="@font/medium"
                android:text="@string/reset_password_move_button"/>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>